Fixed bug on the table styles menu not showing items upon inserting a table. Improved styling of tables in the editor.

--- a/src/silva/core/editor/static/content.css
+++ b/src/silva/core/editor/static/content.css
@@ -60,26 +60,42 @@ a.broken-link {
 
 /* table styling in ckeditor, it can be overridden by using '.ckeditor_contents' */
 
-table.plain, table.list {
+table.plain,
+table.list,
+table.grid {
+    width: 100%;
     border: none;
+    border-collapse: collapse
 }
 
-table.plain td {
+table.datagrid {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 2px;
+}
+
+table.plain td, table.plain th {
     border: 1px dashed #777;
+    text-align: left;
+    padding: 0 4px 0 0;
 }
 
-table.list td {
+table.list td, table.list th {
     border: 1px solid #777;
-    border-right: none;
-    border-left: none;
+    border-right: 1px dashed #777;
+    border-left: 1px dashed #777;
+    text-align: left;
+    padding: 0 4px 0 0;
 }
 
-table.grid,
-table.grid td {
+table.grid td, table.grid th {
     border: 1px solid #777;
+    text-align: left;
+    padding: 0 2px;
 }
 
-table.datagrid,
-table.datagrid td {
+table.datagrid td, table.datagrid th {
     border: 2px solid #777;
+    text-align: left;
+    padding: 0 2px;
 }
